--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-spring.datasource.url=jdbc:mysql://129.173.213.201:3306/CSCI5308_14_DEVINT
-spring.datasource.username=CSCI5308_14_DEVINT_USER
-spring.datasource.password=tapees1eRa
+spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_CSCI5308_14_DEVINT
+spring.datasource.username=freedb_CSCI5308_14_DEVINT_USER
+spring.datasource.password=s$jXc*5!?t729A@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.security.oauth2.client.registration.google.client-id=104907001030-vo1bkmkvsrdble6ajc3rl0gs8e4o231g.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=625575270938-deeu64ed6rp9dtcdfat5umk1s3efpf2c.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 spring.mail.protocol=smtp
 spring.mail.host: smtp.gmail.com
 spring.mail.port: 465
-spring.mail.username:rachitgrevq@gmail.com
-spring.mail.password:ukuitgflmeznexdj
+spring.mail.username:kazinizamul488@gmail.com
+spring.mail.password:wyKNgYWg0w4Xmu9sNT1E
 spring.mail.properties.mail.smtp.auth: true
 spring.mail.properties.mail.smtp.starttls.enable: true
 mail.smtp.starttls.enable=false
