--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18.18
 
 WORKDIR /app
 COPY package.json yarn.lock ./
-RUN yarn install
+RUN yarn install --network-timeout 600000
 COPY . .
 EXPOSE 5173
 ENTRYPOINT ["yarn", "dev"]
