--- a/ui/package.json
+++ b/ui/package.json
@@ -42,7 +42,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "uuid": "^9.0.1",
-    "vite": "5",
+    "vite": "^5.0.0",
     "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
