--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "strangely",
   "version": "1.0.0",
+  "type": "module",
   "main": "src/core/index.jsx",
   "license": "MIT",
   "scripts": {
